No close button for Particle Systems Modifier on Blender Game Engine #38739

Closed
opened 2014-02-21 10:21:09 +01:00 by Alvin Nashif Magarang · 6 comments

System Information
Operating system and graphics card
Windows 8 64bit
Nvidia GeForce GT 635M 2GB

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error
No close button for Particle Systems Modifier on Blender Game Engine

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Enter Blender Game Engine Mode
  2. Add a Plane
  3. Modifier Panel > Add a Particle System
    (since it's not supported on BGE Mode, I can't delete the modifier)
**System Information** Operating system and graphics card Windows 8 64bit Nvidia GeForce GT 635M 2GB **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** No close button for Particle Systems Modifier on Blender Game Engine **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Enter Blender Game Engine Mode 2. Add a Plane 3. Modifier Panel > Add a Particle System (since it's not supported on BGE Mode, I can't delete the modifier)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @AlvinNashifMagarang

Added subscriber: @AlvinNashifMagarang
Thomas Dinges self-assigned this 2014-02-21 12:19:01 +01:00

This issue was referenced by blender/blender-addons-contrib@3436c41dee

This issue was referenced by blender/blender-addons-contrib@3436c41dee284b0338674d07025bf47ddfc3bb10

This issue was referenced by 3436c41dee

This issue was referenced by 3436c41dee284b0338674d07025bf47ddfc3bb10

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3436c41dee.

Closed by commit 3436c41dee.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38739
No description provided.