Fix T38739: Simulations, unsupported in the Game Engine, could not be removed from the UI.

Also shorten info messages a bit.