release/scripts/startup/bl_ui/properties_data_modifier.py
@@ -237,10 +237,10 @@ class DATA_PT_modifiers(ModifierButtonsPanel, Panel):
             col.prop(md, "use_transform")
 
     def CLOTH(self, layout, ob, md):
-        layout.label(text="Settings can be found inside the Physics context")
+        layout.label(text="Settings are inside the Physics tab")
 
     def COLLISION(self, layout, ob, md):
-        layout.label(text="Settings can be found inside the Physics context")
+        layout.label(text="Settings are inside the Physics tab")
 
     def CURVE(self, layout, ob, md):
         split = layout.split()
@@ -314,7 +314,7 @@ class DATA_PT_modifiers(ModifierButtonsPanel, Panel):
         row.prop(md, "strength")
 
     def DYNAMIC_PAINT(self, layout, ob, md):
-        layout.label(text="Settings can be found inside the Physics context")
+        layout.label(text="Settings are inside the Physics tab")
 
     def EDGE_SPLIT(self, layout, ob, md):
         split = layout.split()
@@ -349,7 +349,7 @@ class DATA_PT_modifiers(ModifierButtonsPanel, Panel):
         layout.operator("object.explode_refresh", text="Refresh")
 
     def FLUID_SIMULATION(self, layout, ob, md):
-        layout.label(text="Settings can be found inside the Physics context")
+        layout.label(text="Settings are inside the Physics tab")
 
     def HOOK(self, layout, ob, md):
         split = layout.split()
@@ -766,7 +766,7 @@ class DATA_PT_modifiers(ModifierButtonsPanel, Panel):
         col.prop(md, "limits", slider=True)
 
     def SMOKE(self, layout, ob, md):
-        layout.label(text="Settings can be found inside the Physics context")
+        layout.label(text="Settings are inside the Physics tab")
 
     def SMOOTH(self, layout, ob, md):
         split = layout.split(percentage=0.25)
@@ -784,7 +784,7 @@ class DATA_PT_modifiers(ModifierButtonsPanel, Panel):
         col.prop_search(md, "vertex_group", ob, "vertex_groups", text="")
 
     def SOFT_BODY(self, layout, ob, md):
-        layout.label(text="Settings can be found inside the Physics context")
+        layout.label(text="Settings are inside the Physics tab")
 
     def SOLIDIFY(self, layout, ob, md):
         split = layout.split()
@@ -845,7 +845,7 @@ class DATA_PT_modifiers(ModifierButtonsPanel, Panel):
         col.prop(md, "show_only_control_edges")
 
     def SURFACE(self, layout, ob, md):
-        layout.label(text="Settings can be found inside the Physics context")
+        layout.label(text="Settings are inside the Physics tab")
 
     def UV_PROJECT(self, layout, ob, md):
         split = layout.split()
